Fixed styling for mobile device where chart was off screen.

--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -21,6 +21,7 @@ a
 
 #gauge
   height 400px
+  width 500px
   margin 0 auto
 
 #gauge-actions
@@ -105,6 +106,7 @@ a.faster:active
 
   #gauge
     height 300px
+    width 270px
 
   a.slower
     margin-right 2.4em
